# RayTracer-Unit-

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  TODO  author
Dependencies/cson/: CMakeLists.txt  cson.h  cson.mk
Dependencies/cson/include/: cson_parser.h
Dependencies/cson/src/: cson_allocator.c  cson_logger.c  cson_print.c  src.mk
Dependencies/cson/src/cson_builder/: cson_builder.mk  cson_builder_composite.c  cson_builder_primitive.c  cson_push.c  cson_put.c
Dependencies/cson/src/cson_navigator/: cson_at.c  cson_depth.c  cson_find.c  cson_foreach.c  cson_get_composite.c  cson_get_default_primitive.c  cson_get_primitive.c  cson_navigator.mk  cson_root.c  cson_size.c  cson_type_composite.c  cson_type_primitive.c  cson_valueof.c
Dependencies/cson/src/cson_parser/: cson_assignee.c  cson_boolean_handler.c  cson_composite.c  cson_eov_handler.c  cson_file_parser.c  cson_key.c  cson_key_handler.c  cson_number_handler.c  cson_parser.c  cson_parser.h  cson_parser.mk  cson_parser_buffer.c  cson_parser_logger.c  cson_string_handler.c  cson_string_parser.c  cson_transition.c  cson_value_handler.c
Dependencies/cson/src/cson_producer/: cson_composite_producer.c  cson_file_producer.c  cson_node_producer.c  cson_primitive_producer.c  cson_producer.c  cson_producer.h  cson_producer.mk  cson_producer_logger.c  cson_str_producer.c
Dependencies/libft/: CMakeLists.txt  ft.h  libft.mk
Dependencies/libft/ftalst/: ft_alst_add.c  ft_alst_clear.c  ft_alst_create.c  ft_alst_del.c  ft_alst_get.c  ft_alst_get_index.c  ft_alst_iteri.c  ft_alst_remove.c  ft_alst_to_array.c  ftalst.mk
Dependencies/libft/ftamap/: ft_amap_clear.c  ft_amap_contains.c  ft_amap_create.c  ft_amap_get.c  ft_amap_init.c  ft_amap_put.c  ft_amap_remove.c  ftamap.mk
Dependencies/libft/ftchar/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_ishex.c  ft_isprint.c  ft_isws.c  ft_tolower.c  ft_toupper.c  ftchar.mk
Dependencies/libft/ftconv/: ft_atod.c  ft_atoi.c  ft_binary_ulltoa.c  ft_hex_atoui.c  ft_hex_uitoa.c  ft_hex_ulltoa.c  ft_itoa.c  ft_itoa_cat.c  ft_ldtoa.c  ft_lltoa.c  ft_octal_uitoa.c  ft_octal_ulltoa.c  ft_uitoa.c  ft_ulltoa.c  ftconv.mk
Dependencies/libft/ftcore/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ftcore.mk
Dependencies/libft/ftfile/: ft_get_basename_part.c  ft_get_dir_part.c  ft_merge_file_names.c  ft_read_file.c  ftfile.mk
Dependencies/libft/ftfloat/: ft_float_frac.c  ft_float_inf.c  ft_float_nan.c  ft_float_neg.c  ftfloat.mk
Dependencies/libft/ftio/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ftio.mk  get_next_line.c
Dependencies/libft/ftio/ftprintf/: conversion.c  conversion_handler.c  conversion_recognizer.c  ereal.c  freal.c  ftprintf.c  ftprintf.mk  greal.c  hhinteger.c  hinteger.c  integer.c  jinteger.c  linteger.c  llinteger.c  multibyte.c  number_manager.c  output.c  output_color.c  parser.c  printf.c  real.c  real_manager.c  recognizer.c  text_manager.c  tinteger.c  wildcard.c  wtext_manager.c  zinteger.c
Dependencies/libft/ftio/ftprintf/include/: conversion.h  conversion_handler.h  multibyte.h  number_manager.h  output.h  output_color.h  parser.h  printf.h  real_manager.h  recognizer.h  text_manager.h  wildcard.h
Dependencies/libft/ftlst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstreduce.c  ftlst.mk
Dependencies/libft/ftmath/: ft_math_ceil.c  ft_math_fabs.c  ft_math_fsqrt.c  ft_math_pow.c  ft_math_round.c  ftmath.mk
Dependencies/libft/ftmath/complex/: complex.mk  complex_add.c  complex_div.c  complex_prod.c  complex_sub.c
Dependencies/libft/ftmath/mat/: mat.mk  mat3_determinant.c  mat4_determinant.c  mat_create.c  mat_identity.c  mat_inverse.c  mat_mat_mult.c  mat_minor.c  mat_print.c  mat_scalar.c  mat_transpose.c  mat_vec_mult.c  vec_mat_mult.c
Dependencies/libft/ftmath/vec/: rgba2vec.c  to_vec3.c  vec.mk  vec2rgba.c  vec_add.c  vec_cross.c  vec_dot.c  vec_length.c  vec_mult.c  vec_normalize.c  vec_print.c  vec_reflect.c  vec_scalar.c  vec_sub.c
Dependencies/libft/ftmisc/: create_rect.c  ft_count_num_length.c  ft_iswap.c  ftmisc.mk  max.c  min.c
Dependencies/libft/ftsort/: ft_insertion_sort.c  ft_merge_sort.c  ft_quick_sort.c  ft_sort.c  ftsort.mk
Dependencies/libft/ftstack/: ft_stack_cleanup.c  ft_stack_create.c  ft_stack_pop.c  ft_stack_push.c  ftstack.mk
Dependencies/libft/ftstr/: ft_str_ends_with.c  ft_strcat.c  ft_strchr.c  ft_strchrn.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strnchr.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strreplallchr.c  ft_strreplallstr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ftstr.mk
Dependencies/libft/fttime/: ft_month.c  ft_year.c  fttime.mk
Dependencies/libft/include/: complex.h  ft_alst.h  ft_amap.h  ft_file.h  ft_float.h  ft_math.h  ft_sort.h  ft_stack.h  ft_time.h  libft.h  mat.h  rect.h  vec.h
Dependencies/nuklear/: CMakeLists.txt  nuklear_sdl.c  nuklear_sdl.h
Dependencies/nuklear/src/: nuklear.h  nuklear_color.c  nuklear_internal.h  nuklear_vertex.c
Dependencies/targa/: CMakeLists.txt  (+2 more)
include/: camera.h  error.h  gui.h  light.h  lightsource.h  limitation.h  logger.h  material.h  opencl.h  raytracer.h  renderer.h  scene.h  sceneiterator.h  shape.h  texture.h  vfx.h  window.h
scenes/: apple_on_table.cson  cone_test.cson  cube.cson  hall_scene.cson  hall_spot_scene.cson  mirror_scene.cson  refraction.cson  subject_01.cson  subject_02.cson  subject_03.cson  subject_04.cson  subject_05.cson  subject_06.cson  three_spheres.cson
src/: CMakeLists.txt  UNUSED_gui_trash_elements.c  camera_input_handler.c  error.c  gui.c  gui_elements.c  gui_functions.c  gui_popups.c  gui_shapes_win.c  gui_windows.c  main.c  renderer.c  renderer_render.c  scene.c  snapshot.c  window.c  window_msg_box.c
(+373 files in other folders)
